Actions
Bug #10555
closed'?' is not match to multibyte character at commandline globbing on Windows
Bug #10555:
'?' is not match to multibyte character at commandline globbing on Windows
ruby -v:
-
Backport:
Description
Updated by nobu (Nobuyoshi Nakada) almost 12 years ago
- Status changed from Assigned to Closed
- % Done changed from 0 to 100
Applied in changeset r48648.
win32.c: use UTF-8 for argv
- ruby.c (ruby_set_argv): convert argv from UTF-8.
- win32/win32.c (rb_w32_sysinit, cmdglob, w32_cmdvector): convert
wide char command line to UTF-8 argv, and glob in UTF-8 so that
metacharacters would match multibyte characters.
[ruby-dev:48752] [Bug #10555]
Updated by nobu (Nobuyoshi Nakada) almost 9 years ago
- Related to Feature #2255: unicode parameters cannot be passed to ruby added
Actions